# silent-anonymous-credentials

./: Cargo.toml  LICENSE  README.md
benches/: agg_sig.rs  agg_sig_verify.rs  show.rs  show_verify.rs  sign.rs  verify.rs
src/: crs.rs  lib.rs  oldcrs.rs  utils.rs
src/gs08/: mod.rs
src/silent_ac/: mod.rs
src/silent_sps/: aggregate.rs  mod.rs
src/sps/: mod.rs
